refactor: 비회원 주문조회 관련 기능 수정