@@ -21,7 +21,9 @@ import com.nhnacademy.orderpaymentrefund.dto.order.response.FindNonClientOrderId
 import com.nhnacademy.orderpaymentrefund.dto.order.response.NonClientOrderGetResponseDto;
 import com.nhnacademy.orderpaymentrefund.filter.HeaderFilter;
 import com.nhnacademy.orderpaymentrefund.service.order.impl.NonClientOrderServiceImpl;
+import java.util.ArrayList;
 import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -116,26 +118,17 @@ class NonClientOrderControllerTest {
     }
 
     @Test
-    @DisplayName("비회원 주문 아이디 찾기 페이지 테스트")
+    @DisplayName("비회원 주문 아이디 찾기 리스트 테스트")
     void findNonClientOrderIdTest() throws Exception {
 
         HttpHeaders headers = new HttpHeaders();
 
-        Page<FindNonClientOrderIdInfoResponseDto> orderPage = new PageImpl<>(
-            Collections.singletonList(FindNonClientOrderIdInfoResponseDto.builder().build())
-        );
-
-        PageRequest expectedPageRequest = PageRequest.of(
-            0, // pageNo
-            10, // pageSize
-            Sort.by(Sort.Direction.ASC, "orderDatetime") // sortBy and sortDir
-        );
+        List<FindNonClientOrderIdInfoResponseDto> orderList = new ArrayList<>(List.of(FindNonClientOrderIdInfoResponseDto.builder().build()));
 
         when(nonClientOrderService.findNonClientOrderId(
             any(HttpHeaders.class),
-            any(FindNonClientOrderIdRequestDto.class),
-            eq(expectedPageRequest) // Verify PageRequest
-        )).thenReturn(orderPage);
+            any(FindNonClientOrderIdRequestDto.class)
+        )).thenReturn(orderList);
 
         mockMvc.perform(
             get("/api/non-client/orders/find-orderId")
@@ -148,32 +141,10 @@ class NonClientOrderControllerTest {
 
         verify(nonClientOrderService).findNonClientOrderId(
             any(HttpHeaders.class),
-            any(FindNonClientOrderIdRequestDto.class),
-            eq(expectedPageRequest) // Check the PageRequest argument
+            any(FindNonClientOrderIdRequestDto.class)
         );
 
     }
 
-    @Test
-    @DisplayName("비회원 주문 비밀번호 테스트")
-    void findNonClientOrderPasswordTest() throws Exception {
-
-        HttpHeaders headers = new HttpHeaders();
-
-        Long orderId = 1L;
-        String findPassword = "찾은 비밀번호";
-
-        when(nonClientOrderService.findNonClientOrderPassword(any(HttpHeaders.class), any(FindNonClientOrderPasswordRequestDto.class))).thenReturn(findPassword);
-
-        mockMvc.perform(
-            get("/api/non-client/orders/find-password")
-                .headers(headers)
-                .param("orderId", String.valueOf(orderId))
-                .param("ordererName", "홍길동")
-                .param("phoneNumber", "01012341234")
-                .param("email", "gildong@test.com")
-        ).andExpect(status().isOk());
-
-    }
 
 }
